--- a/Wired.IO.Playground/Wired.IO.Playground.csproj
+++ b/Wired.IO.Playground/Wired.IO.Playground.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Wired.IO\Wired.IO.csproj" />
+  </ItemGroup>
+
 </Project>
