--- a/Wired.IO/Wired.IO.csproj
+++ b/Wired.IO/Wired.IO.csproj
@@ -32,8 +32,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.6" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.6" />
+		<PackageReference Include="System.IO.Pipelines" Version="9.0.6" />
 	</ItemGroup>
 
 </Project>
