--- a/Wired.IO/Wired.IO.csproj
+++ b/Wired.IO/Wired.IO.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>net9.0</TargetFrameworks>
+	  <TargetFramework>net9.0</TargetFramework>
 	  <ImplicitUsings>enable</ImplicitUsings>
 	  <Nullable>enable</Nullable>
 	  <Title>Wired.IO</Title>
@@ -31,11 +31,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.6" />
-		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.6" />
-		<PackageReference Include="System.IO.Pipelines" Version="9.0.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.8" />
+		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.8" />
+		<PackageReference Include="System.IO.Pipelines" Version="9.0.8" />
 	</ItemGroup>
 
 </Project>
