--- a/Wired.IO.Playground/Wired.IO.Playground.csproj
+++ b/Wired.IO.Playground/Wired.IO.Playground.csproj
@@ -5,10 +5,23 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+      <IsTestAssetProject>true</IsTestAssetProject>
+      <ServerGarbageCollection>true</ServerGarbageCollection>
+      <TieredPGO>true</TieredPGO>
+
+      <!-- Required for self-contained publish -->
+      <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+      <SelfContained>true</SelfContained>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wired.IO\Wired.IO.csproj" />
+      <!--<PackageReference Include="Wired.IO" Version="9.2.0" />-->
   </ItemGroup>
+
+    <ItemGroup Condition="$(PublishAot) == 'true'">
+        <RuntimeHostConfigurationOption Include="System.Threading.ThreadPool.HillClimbing.Disable" Value="true" />
+    </ItemGroup>
 
 </Project>
