--- a/Wired.IO.Playground/Wired.IO.Playground.csproj
+++ b/Wired.IO.Playground/Wired.IO.Playground.csproj
@@ -11,9 +11,14 @@
       <TieredPGO>true</TieredPGO>
 
       <!-- Required for self-contained publish -->
-      <!--<RuntimeIdentifier>linux-x64</RuntimeIdentifier>-->
+      <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
       <SelfContained>true</SelfContained>
   </PropertyGroup>
+
+    <!--<PropertyGroup>
+        <PublishAot>true</PublishAot>
+        <OptimizationPreference>Speed</OptimizationPreference>
+    </PropertyGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\Wired.IO\Wired.IO.csproj" />
