--- a/Wired.IO/Wired.IO.csproj
+++ b/Wired.IO/Wired.IO.csproj
@@ -17,6 +17,9 @@
 	  <Description>https://mda2av.github.io/Wired.IO.Docs/</Description>
 	  <PackageProjectUrl>https://github.com/MDA2AV/Wired.IO</PackageProjectUrl>
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+      
+      <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+      
   </PropertyGroup>
 
 	<ItemGroup>
