--- a/Wired.IO/Wired.IO.csproj
+++ b/Wired.IO/Wired.IO.csproj
@@ -17,10 +17,17 @@
 	  <Description>https://mda2av.github.io/Wired.IO.Docs/</Description>
 	  <PackageProjectUrl>https://github.com/MDA2AV/Wired.IO</PackageProjectUrl>
 	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      
-      <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+
+	  <!-- Required for self-contained publish in linux-x64 -->
+      <!--<RuntimeIdentifier>linux-x64</RuntimeIdentifier>-->
       
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Http11Express\Websockets\**" />
+    <EmbeddedResource Remove="Http11Express\Websockets\**" />
+    <None Remove="Http11Express\Websockets\**" />
+  </ItemGroup>
 
 	<ItemGroup>
 		<None Include="..\LICENSE">
@@ -39,10 +46,6 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.8" />
 		<PackageReference Include="Microsoft.Extensions.ObjectPool" Version="9.0.8" />
 		<PackageReference Include="System.IO.Pipelines" Version="9.0.8" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Http11Express\Websockets\" />
 	</ItemGroup>
 
 </Project>
